--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   cursor: pointer;
 }
 </style>
+<script type="text/javascript" charset="utf-8">
   (function (g, e, n, es, ys) {
     g['_genesysJs'] = e;
     g[e] = g[e] || function () {
@@ -54,8 +55,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
     ys = document.createElement('script'); ys.async = 1; ys.src = n; ys.charset = 'utf-8'; document.head.appendChild(ys);
   })(window, 'Genesys', 'https://apps.mypurecloud.com/genesys-bootstrap/genesys.min.js', {
     environment: 'use1',
-    deploymentId: '8a6c34f8-aaf7-4938-8060-8bf94ffc8c4e'
+    deploymentId: 'd1c17b7b-0a18-4c32-bb0b-b0aba29cdf1a'
   });
+</script>
 </head>
 <body>
 
