--- a/index.html
+++ b/index.html
@@ -5,42 +5,67 @@
 <style>
 body {font-family: Arial, Helvetica, sans-serif;}
 
-/* The Modal (background) */
-.modal {
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
+#modal {
+  font-family: Oswald, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  position: fixed;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  left: 0;
+  background: rgba(0, 0, 0, 0.377);
+  z-index: 99999;
+  height: 100%;
+  width: 100%;
 }
-
-/* Modal Content */
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
+.modalcontent {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  width: min(90%, 500px);
   padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
 }
 
-/* The Close Button */
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+#modallogo {
+  margin-top: 24px;
 }
 
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
+.modalheading {
+  font-weight: 400;
+}
+
+.close-modal {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  transition: 0.5s;
+  font-size: 20px;
+}
+.close-modal:hover {
+  color: #a9a9a9;
+}
+
+.modalButton {
+  font-family: Oswald, sans-serif;
+  transition: 0.5s;
+  background-color: #ffffff;
+  border: 1px solid #000000;
+  display: flex;
   cursor: pointer;
+  color: #000000;
+  font-size: 14px;
+  padding: 16px 31px;
+  margin-bottom: 10px;
+  text-decoration: none;
+}
+.modalButton:hover {
+  color: #ffffff;
+  background-color: #000000;
+}
+.modalButton:active {
+  position: relative;
+  top: 1px;
 }
 </style>
 </head>
@@ -48,46 +73,25 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 <h2>Modal Example</h2>
 
-<!-- Trigger/Open The Modal -->
-<button id="myBtn">Open Modal</button>
-
-<!-- The Modal -->
-<div id="myModal" class="modal">
-
-  <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <p>Some text in the Modal..</p>
+<div id="modal">
+  <div class="modalcontent">
+    <h1>Hello</h1>
+    <i id="close" class="close-modal fas fa-times"></i>
   </div>
+</div>
 
 </div>
 
 <script>
-// Get the modal
-var modal = document.getElementById("myModal");
-
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn");
-
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks the button, open the modal 
-btn.onclick = function() {
-  modal.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-  modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
+window.onload = function () {
+  if (sessionStorage.getItem("modal") === "none") {
+    document.getElementById("modal").style.display = "none";
   }
-}
+  document.getElementById("close").onclick = function () {
+    document.getElementById("modal").style.display = "none";
+    sessionStorage.setItem("modal", "none");
+  };
+};
 </script>
 <script type="text/javascript" charset="utf-8">
   (function (g, e, n, es, ys) {
