--- a/index.html
+++ b/index.html
@@ -71,12 +71,23 @@ body {font-family: Arial, Helvetica, sans-serif;}
 </head>
 <body>
 
-<h2>Modal Example</h2>
+<h2>Genesys Hackathon 2022 Example</h2>
 
 <div id="modal">
   <div class="modalcontent">
-    <h1>Hello</h1>
-    <i id="close" class="close-modal fas fa-times"></i>
+    <p>The select element is used to create a drop-down list.</p>
+
+<form action="/action_page.php">
+  <label for="cars">Choose a car:</label>
+  <select name="cars" id="cars">
+    <option value="volvo">Volvo</option>
+    <option value="saab">Saab</option>
+    <option value="opel">Opel</option>
+    <option value="audi">Audi</option>
+  </select>
+  <br><br>
+  <input type="submit" value="Submit">
+</form>
   </div>
 </div>
 
