--- a/index.html
+++ b/index.html
@@ -75,19 +75,10 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 <div id="modal">
   <div class="modalcontent">
-    <p>The select element is used to create a drop-down list.</p>
-
-<form action="/action_page.php">
-  <label for="cars">Choose a car:</label>
-  <select name="cars" id="cars">
-    <option value="volvo">Volvo</option>
-    <option value="saab">Saab</option>
-    <option value="opel">Opel</option>
-    <option value="audi">Audi</option>
-  </select>
-  <br><br>
-  <input type="submit" value="Submit">
-</form>
+    <p>Chat with us:</p>
+		<button type="button" onclick="alert('Hello world!')">My Account</button>
+		<button type="button" onclick="alert('Hello world!')">Order Checks</button>
+		<button type="button" onclick="alert('Hello world!')">Dispute Charge</button>
   </div>
 </div>
 
