--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 <h2>Genesys Hackathon 2022 Example</h2>
 
+<h3>Messenger - Floating Quick Replies</h3>
+<p>Goal: Drive more conversation starts by displaying floating Quick Replies outside of Messenger, enticing the customer to begin a conversation</p>
+
 <div id="modal">
   <div class="modalcontent">
     <p>Chat with us:</p>
