--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 		<button type="button" onclick="alert('Hello world!')">Dispute Charge</button>
   </div>
 </div>
-
+<img ig= "hackathon-widget-button" src="/images/hackathon-widget-button.png" onclick="function()">
 </div>
 
 <script>
