--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@ body {font-family: Arial, Helvetica, sans-serif;}
   position: relative;
   top: 1px;
 }
+.hackathon-widget-button {
+	position: absolute;
+	bottom: 12px;
+	right: 20px;
+}
 </style>
 </head>
 <body>
@@ -83,7 +88,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 		<button type="button" onclick="alert('Hello world!')">Dispute Charge</button>
   </div>
 </div>
-<img ig= "hackathon-widget-button" src="/images/hackathon-widget-button.png" onclick="function()">
+<img id= "hackathon-widget-button" src="/images/hackathon-widget-button.png" onclick="function()">
 </div>
 
 <script>
