--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 		<button type="button" onclick="alert('Hello world!')">Dispute Charge</button>
   </div>
 </div>
-<img id= "hackathon-widget-button" src="/images/hackathon-widget-button.png" onclick="function()">
+<img id= "hackathon-widget-button" src="/images/hackathon-widget-button.png" onclick="toggleMessenger()">
 </div>
 
 <script>
