--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   position: relative;
   top: 1px;
 }
-.hackathon-widget-button {
+#hackathon-widget-button {
 	position: absolute;
 	bottom: 12px;
 	right: 20px;
