--- a/index.html
+++ b/index.html
@@ -117,5 +117,15 @@ window.onload = function () {
   });
 </script>
 <img id= "hackathon-widget-button" src="/images/hackathon-widget-button.png" onclick="toggleMessenger()">
+<script type="text/javascript">
+  function toggleMessenger(){
+    Genesys("command", "Messenger.open", {},
+      function(o){},  // if resolved
+      function(o){    // if rejected
+        Genesys("command", "Messenger.close");
+      }
+    );
+  }
+</script>
 </body>
 </html>
