--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
 	bottom: 12px;
 	right: 20px;
 	background: url(/images/hackathon-widget-button.png);
+	border: none;
+	width: 58px;
+	height: 58px;
 }
 </style>
 </head>
