--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 	position: absolute;
 	bottom: 12px;
 	right: 20px;
-	background: url(/images/hackathon-widget-button.png);
+	background: url(https://genesysnick.github.io/images/hackathon-widget-button.png);
 	border: none;
 	width: 58px;
 	height: 58px;
