--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
 <div id="modal">
   <div class="modalcontent">
     <p>Chat with us:</p>
-		<button type="button" onclick="alert('Hello world!')">My Account</button>
-		<button type="button" onclick="alert('Hello world!')">Order Checks</button>
-		<button type="button" onclick="alert('Hello world!')">Dispute Charge</button>
+		<button type="button" onclick="toggleMessenger()">My Account</button>
+		<button type="button" onclick="toggleMessenger()">Order Checks</button>
+		<button type="button" onclick="toggleMessenger()">Dispute Charge</button>
   </div>
 </div>
 
