--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
 	width: 58px;
 	height: 58px;
 }
+.cx-messenger-with-fab {
+    bottom: 86px;
+}
 </style>
 </head>
 <body>
