--- a/index.html
+++ b/index.html
@@ -75,8 +75,12 @@ body {font-family: Arial, Helvetica, sans-serif;}
 	width: 58px;
 	height: 58px;
 }
-.cx-messenger-with-fab {
+.cx-messenger-container {
+    position: absolute;
+    top: 0px;
     bottom: 86px;
+    right: 0;
+    left: 0;
 }
 </style>
 </head>
