--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 .cx-messenger-container {
     position: absolute;
     top: 0px;
-    bottom: 86px;
+    bottom: 86px !important;
     right: 0;
     left: 0;
 }
