--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: rgba(0, 0, 0, 0.15);
+  background: rgba(0, 0, 0, 0.05);
   width: min(90%, 500px);
   padding: 20px;
 }
@@ -90,6 +90,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 <div id="modal">
   <div class="modalcontent">
+	<i id="close" class="close-modal fas fa-times"></i>
     <p>Chat with us:</p>
 		<button type="button" onclick="toggleMessenger()">My Account</button>
 		<button type="button" onclick="toggleMessenger()">Order Checks</button>
