--- a/index.html
+++ b/index.html
@@ -74,11 +74,10 @@ body {font-family: Arial, Helvetica, sans-serif;}
 	height: 58px;
 }
 .cx-messenger-container {
-    position: absolute;
-    top: 0px;
     bottom: 86px !important;
-    right: 0;
-    left: 0;
+}
+.cx-messenger {
+    bottom: 86px !important;
 }
 </style>
 </head>
