--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@ body {font-family: Arial, Helvetica, sans-serif;}
   z-index: 99999;
 }
 .modalcontent {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: rgba(0, 0, 0, 0.05);
-  width: min(90%, 500px);
-  padding: 20px;
+	position: absolute;
+    top: 60%;
+    right: 0px;
+    background: rgba(0, 0, 0, 0);
+    width: min(109px);
+    padding: 20px;
 }
 
 #modallogo {
@@ -78,6 +77,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 .cx-messenger {
     bottom: 86px !important;
+}
+button {
+    margin-bottom: 10px;
 }
 </style>
 </head>
