--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 	position: absolute;
     top: 60%;
     right: 0px;
-    background: rgba(0, 0, 0, 0);
+    background: rgba(0, 0, 0, .01);
     width: min(109px);
     padding: 20px;
 }
