--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
 	border: none;
 	width: 58px;
 	height: 58px;
+	cursor: pointer;
+	box-shadow: 0px 3px 5px -1px rgb(0 0 0 / 20%), 0px 6px 10px 0px rgb(0 0 0 / 14%), 0px 1px 18px 0px rgb(0 0 0 / 12%);
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 .cx-messenger-container {
     bottom: 86px !important;
