--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 	position: absolute;
     top: 60%;
     right: 0px;
-    background: rgba(0, 0, 0, .01);
+    background: rgba(0, 0, 0, .03);
     width: min(109px);
     padding: 20px;
 }
@@ -74,6 +74,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 	cursor: pointer;
 	box-shadow: 0px 3px 5px -1px rgb(0 0 0 / 20%), 0px 6px 10px 0px rgb(0 0 0 / 14%), 0px 1px 18px 0px rgb(0 0 0 / 12%);
 	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+	border-radius: 50%!important;
 }
 .cx-messenger-container {
     bottom: 86px !important;
