--- a/index.html
+++ b/index.html
@@ -88,19 +88,27 @@ button {
     margin-bottom: 10px;
 	cursor: pointer;
 }
+#header {
+	background-color: #ffffff;
+}
+#topic {
+	background-color: #23395d;
+	background-image: url(https://genesysnick.github.io/images/flair-navy-lite-huge-curtain.svg);
+}
 </style>
 </head>
 <body>
-
+<div id="header">
 <h2>Genesys Hackathon 2022 Example</h2>
-
+</div>
+<div id="topic">
 <h3>Messenger - Floating Quick Replies</h3>
 <p>Goal: Drive more conversation starts by displaying floating Quick Replies outside of Messenger, enticing the customer to begin a conversation</p>
 <h3>Current state:</h3>
 <p>Messenger has Conversation Auto-start in Beta and releasing GA on September 14th. When Auto-start is enabled, as soon as Messenger is opened <br>a "Customer joined" event is sent behind the scenes, triggering the inbound message flow. Most commonly, the first action in the flow is a bot reply of some sort.</p>
 <h3>Idea:</h3>
 <p>HMW display the initial question+Quick Reply buttons of the bot flow outside of Messenger, before the user has opened Messenger. <br>By "starting" the conversation outside of Messenger, customers may be more likely to start the conversation when they otherwise may not have.</p>
-
+</div>
 <div id="modal">
   <div class="modalcontent">
 	<i id="close" class="close-modal fas fa-times"></i>
