--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@ button {
 #topic {
 	background-color: #23395d;
 	background-image: url(https://genesysnick.github.io/images/flair-navy-lite-huge-curtain.svg);
+	width: 100%;
+	height: 400px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 </style>
 </head>
