--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@ button {
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
+#topic h3 {
+    color: #ff4f1f;
+}
+#topic p {
+    color: #fff;
+}
 </style>
 </head>
 <body>
