--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@ button {
 	background-color: #23395d;
 	background-image: url(https://genesysnick.github.io/images/flair-navy-lite-huge-curtain.svg);
 	width: 100%;
-	height: 400px;
+	height: 600px;
 	padding-top: 20px;
 	padding-bottom: 20px;
+	padding-left: 20px;
 }
 #topic h3 {
     color: #ff4f1f;
