--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 button {
     margin-bottom: 10px;
 	cursor: pointer;
+	background-color: #fff;
 }
 #header {
 	background-color: #ffffff;
