--- a/index.html
+++ b/index.html
@@ -96,10 +96,12 @@ button {
 	background-color: #23395d;
 	background-image: url(https://genesysnick.github.io/images/flair-navy-lite-huge-curtain.svg);
 	width: 100%;
-	height: 600px;
+	height: 100%;
 	padding-top: 20px;
 	padding-bottom: 20px;
 	padding-left: 20px;
+	left: 0;
+	top: 0;
 }
 #topic h3 {
     color: #ff4f1f;
