- Made textual changes to "The Solution" and "Day 2 Options". - Modified titles on The Caffeinated Consultants. - Modified dropdown behavior on smaller windows.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 							<div class="col-12">
 
 								<!-- Blog -->
-									<section>
+									<section class="blog">
 										<header class="major">
 											<h2>The Solution</h2>
 										</header>
@@ -143,20 +143,54 @@
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 													<header>
-														<h3>Solution Step</h3>
-														<p>Posted 45 minutes ago</p>
+														<h3>The Solution</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
+													<p>We decided to create floating quick-replies that keep to the Genesys branding and theme &nbsp; with an addition of a few new ideas.</p>
+													<p>
+														<ol>
+															<li>
+																A <strong>"Need Help?"</strong> banner that grabs the user's attention with visual effects:
+																<ul>
+																	<li>It loads after 5 seconds on the page.</li>
+																	<li>Stays unobtrusive and out of the way of website content.</li>
+																	<li>Reminds the user that chat is an option by moving occasionally.</li>
+																</ul>
+															</li>
+															<li>
+																A click event handler on the widget button that slides out quick-reply buttons to help navigate directly to the bot intent:
+																<ul>
+																	<li>These appear when you click on the widget.</li>
+																	<li>They have a slightly different visual theme to promote awareness.</li>
+																	<li>They stay unobtrusive and slide away when the user moves the mouse away from the widget.</li>
+																</ul>
+															</li>
+															<li>
+																Regular functionality of the widget is not changed:
+																<ul>
+																	<li>You can still enable a conversation that does not jump ahead to a specific intent.</li>
+																	<li>Participant data is still appended to the interaction so downstream reporting understands what the customer was looking for.</li>
+																	<li>All but help functions are still present.</li>
+																</ul>
+															</li>
+														</ol>
 												</section>
 											</div>
 											<div class="col-6 col-12-small">
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
 													<header>
-														<h3>Additional Information</h3>
-														<p>Posted 45 minutes ago</p>
+														<h3>Day 2 Options</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
+													<p>This idea is just the beginning. Our code is highly customizable and extensible and could be added to the current Genesys widget with minimal effort. With the collaboration of <strong>Product Engineering</strong>, creating floating quick-replies could be enhanced for the customer in the following areas.</p>
+													<p>
+														<ul>
+															<li><strong>Custom Blueprint</strong> created to walk customers through setting up this functionality today.</li>
+															<li>Enable certain <strong>intents</strong> to be floating <strong>quick-replies</strong> via the bot flow.</li>
+															<li><strong>Quick Configurable Settings</strong> in the Admin Panel for changing the "Need Help?" text, moving effects, and other aspects of the plugin.</li>
+															<li>Floating Quick Replies could launch other features like <strong>callback</strong>, <strong>co-browse</strong>, <strong>authenticated sessions</strong>, and other customizable actions.</li>
+														</ul>
+													</p>
+													<p>With our version of floating quick replies, the sky is the limit. We hope customers will take the idea and run with it to create new and exciting ways of interacting with the Genesys platform.</p>
 												</section>
 											</div>
 										</div>
@@ -178,7 +212,10 @@
 													<header>
 														<h3>Nicholas Smith</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>
+														<strong>Manager &ndash; NA Digital</strong><br />
+														<em>Team Captain & Back-End Dev</em>
+													</p>
 												</section>
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
@@ -187,7 +224,10 @@
 													<header>
 														<h3>Erwin Merioles</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>
+														<strong>Manager &ndash; Manila COE</strong><br />
+														<em>Co-Captain & Front-End Dev</em>
+													</p>
 												</section>
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
@@ -196,7 +236,10 @@
 													<header>
 														<h3>Ryan Hale</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>
+														<strong>Principal Consultant &ndash; NA Digital</strong><br />
+														<em>Back-End Dev</em>
+													</p>
 												</section>
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
@@ -205,7 +248,10 @@
 													<header>
 														<h3>Tijuan Brown</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>
+														<strong>PS Consultant &ndash; NA Genesys Cloud Core</strong><br />
+														<em>Front-End Dev</em>
+													</p>
 												</section>
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
@@ -214,7 +260,10 @@
 													<header>
 														<h3>Jean Dulay</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>
+														<strong>PS Consultant &ndash; Manila COE</strong><br />
+														<em>Front-End Dev</em>
+													</p>
 												</section>
 											</div>
 										</div>
